# claude-convo-md-dump

./: .gitignore  AGENTS.md  README.md  as_i_was_saying.py  backends.py  claude_dump.py  models.py  pyproject.toml  session-2026-02-07T16-28-4acd60d6.json  test2.md  zed-agent-storage-investigation.md
.githooks/: pre-commit
skills/: investigate_zed_storage.md
tests/: test_backends_normalization.py  test_cli_behavior.py  test_cli_features.py  test_cli_selectors.py  test_fixtures.py  test_readme_examples.py  test_redaction.py  test_session_discovery.py
tests/fixtures/: manifest.json
tests/fixtures/claude/2026-01-10/: expected_chat.md  expected_thoughts.md  expected_verbose.md  metadata.json  raw.jsonl
tests/fixtures/codex/2025-12-23/: expected_chat.md  expected_thoughts.md  expected_verbose.md  metadata.json  raw.jsonl
tests/fixtures/docs/: zed_storage_snapshot_2026_02_07.md
tests/fixtures/gemini/reasoning_chat/: expected_chat.md  expected_thoughts.md  expected_verbose.md  raw.json
tests/fixtures/gemini/simple_chat/: expected_chat.md  expected_thoughts.md  expected_verbose.md  raw.json
tools/: anonymize_fixture.py  anonymize_jsonl.py  regenerate_fixtures.py
