[project]
name = "claude-convo-md-dump"
version = "0.1.2"
description = "A lightweight tool to convert Claude Code JSONL transcripts to single-file Markdown."
readme = "README.md"
requires-python = ">=3.7"
dependencies = []

[project.scripts]
claude-md-dump = "claude_dump:main"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["claude_dump.py"]
