[project]
name = "as-i-was-saying"
version = "0.2.3"
description = "A lightweight tool to convert Claude, Codex, and Gemini session logs to single-file Markdown."
readme = "README.md"
license = { text = "GPL-3.0-only" }
requires-python = ">=3.7"
dependencies = []

[project.optional-dependencies]
dev = ["pytest"]

[project.scripts]
as-i-was-saying = "as_i_was_saying:main"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.pytest.ini_options]
testpaths = ["tests"]

[tool.hatch.build.targets.wheel]
packages = ["as_i_was_saying.py", "redaction.py"]
